--- a/.gitignore
+++ b/.gitignore
@@ -74,8 +74,8 @@ local.properties
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-
-.idea/**
+*.iml
+.idea/*
 .idea/misc.xml
 .idea/**/workspace.xml
 .idea/**/tasks.xml
